management/cd/argo-cd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-019647448319ae275, subnet-012e87021338d9172
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:938840855523:certificate/5f071d4f-e251-4ce1-9b15-3960914d4a0a
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /login
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
  labels:
    app.kubernetes.io/name: argocd-server
  name: argocd
  namespace: argocd
spec:
  rules:
  - host: argocd.mevly.cloud
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port: 
              number: 80
        path: /*
        pathType: ImplementationSpecific
      - backend:
          service:
            name: argocd-server
            port: 
              number: 443
        path: /*
        pathType: ImplementationSpecific
